fix(home): use better system for spacing

--- a/src/pages/home/ui/page/page.component.less
+++ b/src/pages/home/ui/page/page.component.less
@@ -1,5 +1,12 @@
 @import "@taiga-ui/core/styles/taiga-ui-local.less";
 
+:host {
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+  margin-block: 4rem;
+}
+
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr;
